tests/specs/ecosystem/open_fn/core/0_1_3.test
open-fn/core/0.1.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
export type ServerOptions = (Deno.ServeOptions | Deno.ServeTlsOptions) & {
                                                      ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/server/server.ts:4:55

